# sos-ansible

./: .gitignore  .pylintrc  Dockerfile  DockerfileDebug  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
helpers/: rule_writer.py  rule_writer_input.py
rules/: controller.json  hub-rules.json  pg-node.json  rules.json  tower.json
sample/: main.py
sample/modules/: additional.py
sos-ansible/: main.py
sos-ansible/config/: logging.json
sos-ansible/modules/: file_handling.py  locating_sos.py
sos_ansible/: __init__.py  __main__.py  main.py
sos_ansible/modules/: config_manager.py  file_handling.py  locating_sos.py  parsing.py
sos_ansible/modules/helpers/: rule_writer.py  rule_writer_input.py  write_json.py
sos_ansible/tests/data/0123456/sosreport-test-123456/etc/tower/conf.d/: cluster_host_id.py
sos_ansible/tests/testdata/: rules.json  sos_test.ini
sos_ansible/tests/testdata/000000/sosreport-test-000000/etc/: hostname
sos_ansible/tests/testdata/0123456/sosreport-test-123456/etc/tower/conf.d/: cluster_host_id.py
sos_ansible/tests/unit/: test_config_manager.py  test_file_handling.py  test_locating_sos.py
tests/: conftest.py  refactor_needed  test_basic.py  test_config_parser.py  test_file_handling.py  test_locating_sos.py  test_parser.py
