[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sos_ansible"
version = "1.0.4"
authors = [
    {name = "Lucas Benedito", email = "lbenedit@redhat.com"},
]
description = "A sosreport parser for ansible"
requires-python = ">=3.9"
license = {text = "GPL-3.0 license"}
dependencies = [
    "inquirer",
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/lucas-benedito/sos-ansible"
"Bug Tracker" = "https://github.com/lucas-benedito/sos-ansible/issues"

[tool.setuptools]
packages = ["sos_ansible"]

[project.optional-dependencies]
dev = ["black", "pylint", "pytest", "pip-tools"]

[project.scripts]
sos_ansible = "sos_ansible.__main__:main"
